--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@tensorflow/tfjs": "^4.19.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
