--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
     "@tensorflow/tfjs": "^4.19.0",
+    "bootstrap": "^5.3.3",
     "next": "14.2.3",
     "react": "^18",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "three": "^0.164.1",
     "uuid": "^9.0.1"
