--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
       "WebWorker",
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "ES5",
+      "ES2015",
+      "ES2016",
+      "ES2015.Promise"
     ],
     "allowJs": true,
     "skipLibCheck": true,
